gitops/applications/teddycloud-spotify-shim/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-teddycloud-spotify-shim
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
