gitops/applications/teddycloud-spotify-shim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teddycloud-spotify-shim
  namespace: app-teddycloud-spotify-shim
  labels:
    app: teddycloud-spotify-shim
spec:
  selector:
    app: teddycloud-spotify-shim
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
